--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: lightslategray;
+    background: #000;
 }
 
 .container {
@@ -22,19 +22,32 @@ body {
 }
 
 .two {
+  grid-row: 1 / 3;
+  grid-column: 2 / span 4;
+  background-color: red;
 }
 
 .three {
+  grid-row: 2;
+  grid-column: 1;
 }
 
 .four {
+  grid-row: 3 / span 2;
+  grid-column: 1;
+  background-color: blue;
 }
 
 .five {
+  grid-row: 3 / span 2;
 }
 
 .six {
+  grid-row: 3;
+  grid-column: 3 / 6;
 }
 
 .seven {
+  grid-row: 4;
+  grid-column: 3 / 6;
 }
